--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-mithril-app",
+  "name": "mithril-datatable",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/highmountaintea/sample-mithril-app.git"
+    "url": "git+https://bitbucket.org/karagudisuma/mithril-datatable.git"
   },
   "author": "",
   "license": "ISC",
