--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "dotenv": "^5.0.1",
+    "eslint": "^5.14.1",
+    "eslint-plugin-react": "^7.12.4",
     "fsbin": "^1.0.7",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
